reworked some survey questions and kicked out the other stuff

--- a/survey/templates/survey/GeneralQuestions.html
+++ b/survey/templates/survey/GeneralQuestions.html
@@ -5,7 +5,18 @@
 
 {% block content %}
 
-{% formfields %}
+
+{% formfield player.q_age%}
+{% formfield player.q_gender%}
+{% formfield player.q_study_level%}
+{% formfield player.q_student%}
+
+{% formfield player.q_study_field%}
+{% formfield player.q_semester%}
+{% formfield player.q_n_experiment%}
+{% formfield player.q_similar_experiment%}
+{% formfield player.q_other_notes%}
+
 
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
 
