added comments from vasi and judith

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -12,18 +12,18 @@
     <br><br>
 
     {% if super_game_count != 3 %}
-    <b>
     
-        Sie spielen jetzt das gleiche Spiel erneut. Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder abgeschlossenen Runde eine weitere Runde gespielt wird.
+    
+        <b>Sie spielen jetzt das gleiche Spiel erneut.</b> Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder abgeschlossenen Runde eine weitere Runde gespielt wird.
         <br><br>
 
-        WICHTIG: Beachten Sie, dass Sie im folgenden Spiel mit neuen Mitspielern in einem
+        <b>WICHTIG:</b> Beachten Sie, dass Sie im folgenden Spiel mit neuen Mitspielern in einem
         Markt sein werden. 
         
         {% if super_game_count == 2 %}
             <br><br>Dies wird der letzte Durchgang sein.
         {% endif %}
-        </b>
+        
         
     {% else %}
     Dies war das letzte Spiel. Das Experiment endet jetzt. Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
