--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+
     <table class="table">
             
         <b>Ergebnisse der aktuellen Runde</b>
@@ -28,8 +29,8 @@
             {% endfor %}
         </tr>
     </table>
-
-    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Algorithmus hatte allen Firmen einen Preis von {{group.recommendation}} Taler empfohlen. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}} Taler. 
+    Der Algorithmus hatte allen Firmen einen Preis von {{group.recommendation}} Taler empfohlen.<br>
+    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}} Taler. 
 
     <br><br>
 
