--- a/introduction/templates/introduction/Introduction_2.html
+++ b/introduction/templates/introduction/Introduction_2.html
@@ -7,12 +7,12 @@
 In diesem Experiment treffen Sie wiederholt Preisentscheidungen.
  Diese ermöglichen es Ihnen echtes Geld zu verdienen.
   Wie viel Sie verdienen ist abhängig von Ihren Entscheidungen und
-   denen Ihrer Mitspieler. Unabhängig davon erhalten Sie {{show_up_fee}} für die
-    Teilnahme. 
+   denen Ihrer Mitspieler. <b>Unabhängig davon erhalten Sie {{show_up_fee}} für die
+    Teilnahme. </b>
 <br><br>
 Im Experiment verwenden wir eine fiktive Geldeinheit namens Taler.
  Im Anschluss an das Experiment werden die Taler in Euro umgerechnet und Ihnen ausgezahlt.
-  Dabei entsprechen {{ exchange_rate }} Taler einem Euro. Die Euro-Beträge werden auf die erste Nachkommastelle gerundet. 
+  <b>Dabei entsprechen {{ exchange_rate }} Taler einem Euro.</b> Die Euro-Beträge werden auf die erste Nachkommastelle gerundet. 
 <br><br>
 
 <b>Beispiel:</b><br>
