--- a/introduction/templates/introduction/Introduction_4.html
+++ b/introduction/templates/introduction/Introduction_4.html
@@ -5,8 +5,8 @@
 
 {% block content %}
 Nach jeder Runde werden alle Teilnehmer über die gewählten Preise aller drei Firmen und ihren eigenen Gewinn informiert.
- In der nächsten Runde hat jede Firma wieder die Möglichkeit ihren Preis neu zu wählen. Die Teilnehmer sind dabei in allen Runden innerhalb eines Spiels identisch. 
-
+ In der nächsten Runde hat jede Firma wieder die Möglichkeit ihren Preis neu zu wählen. Sie interagieren in jeder Runde innerhalb eines Spiels mit den selben Teilnehmern.
+ 
 <br><br>
 Nach jeder Runde entscheidet ein Zufallsmechanismus, ob eine weitere Runde gespielt wird oder das Spiel endet.
 Die Wahrscheinlichkeit, dass eine weitere Runde gespielt liegt bei 95 %. Das Spiel endet also nach jeder Runde mit einer Wahrscheinlichkeit von 5 %.<br>
