--- a/introduction/templates/introduction/Introduction_1.html
+++ b/introduction/templates/introduction/Introduction_1.html
@@ -7,7 +7,8 @@
 Hallo und herzlich willkommen zu unserem Experiment. 
 In der nächsten Stunde werden Sie an einem Computer Entscheidungen treffen.
 Bitte lesen Sie die Instruktionen aufmerksam durch.
-Alle Teilnehmer erhalten die gleichen Instruktionen. 
+Alle Teilnehmer erhalten die gleichen Instruktionen.
+Eine Kopie dieser Instruktionen finden Sie auch ausgedruckt an Ihrem Platz. 
 Sie bleiben für uns und für die anderen Experimentteilnehmer völlig anonym. Wir speichern keine Daten, die mit Ihrem Namen in Verbindung stehen.
 <br><br>
 <b>Besonders wichtig:</b> Sprechen Sie nicht mit Ihren Nachbarn, benutzen Sie nicht Ihr 
