adjusted questions at the end + tests

--- a/survey/templates/survey/SurveyQuestionsFalk.html
+++ b/survey/templates/survey/SurveyQuestionsFalk.html
@@ -496,6 +496,9 @@
         
     
 </div>
+
+{% formfield player.q_falk6%}
+
 <br>Bitte klicken Sie nach Beantwortung der Fragen auf "Weiter".<br><br>
 
 {{ form.q_falk1.errors }}
