--- a/survey/templates/survey/GeneralQuestions.html
+++ b/survey/templates/survey/GeneralQuestions.html
@@ -9,9 +9,14 @@
 {% formfield player.q_age%}
 {% formfield player.q_gender%}
 {% formfield player.q_study_level%}
-{% formfield player.q_student%}
+
 
 {% formfield player.q_study_field%}
+{% formfield player.q_abitur%}
+{% formfield player.q_math%}
+{% formfield player.q_budget%}
+{% formfield player.q_spending%}
+
 {% formfield player.q_semester%}
 {% formfield player.q_n_experiment%}
 {% formfield player.q_similar_experiment%}
