--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -26,7 +26,8 @@
         
         
     {% else %}
-    Dies war das letzte Spiel. Das Experiment endet jetzt. Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
+    Dies war das letzte Spiel. Das Experiment endet jetzt. <br>
+    Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
 
     {% endif %}
 <br><br>    
