--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -20,7 +20,7 @@ In diesem Spiel repräsentieren Sie eine Firma in einem virtuellen Produktmarkt.
       Jeder Kunde möchte in jeder Runde eines Spiels <b>eine Einheit</b> des Produkts möglichst günstig kaufen.
        Jeder Kunde ist bereit bis zu {{Constants.maximum_price}} Taler für diese Einheit des Produkts auszugeben.
 <br><br>
- Die Firma mit dem <b>niedrigsten Preis in der jeweiligen Runde</b> verkauft Ihre Produkte. <b>Der niedrigste Preis ist der also Marktpreis in der jeweiligen Runde.</b>
+ Die Firma mit dem <b>niedrigsten Preis in der jeweiligen Runde</b> verkauft Ihre Produkte. <b>Der niedrigste Preis ist also der Marktpreis in der jeweiligen Runde.</b>
   Firmen mit einem <b>Preis, der größer als der Marktpreis ist, verkaufen Ihre Produkte in der jeweiligen Runde nicht und erhalten daher einen Gewinn von Null.</b>
    Sollten zwei oder alle drei Firmen Ihr Produkt für den gleichen Marktpreis verkaufen wollen,
     teilt sich die Nachfrage gleichmäßig auf die zwei bzw. drei Firmen auf.
@@ -30,14 +30,14 @@ In diesem Spiel repräsentieren Sie eine Firma in einem virtuellen Produktmarkt.
 
 <h3> Beispiele </h3>
 <b>Beispiel 1:</b>
-Firma 1 setzt einen Preis von 4, Firma 2 setzt einen Preis von 4, Firma 3 setzt einen Preis von 6. Somit haben Firma 1 und 2 gemeinsam den niedrigsten Preis gesetzt. Firma 1 und 2 verkaufen beide die gleiche Anzahl an Produkten, beide Firmen haben jeweils 15 Kunden und bekommen damit den gleichen Gewinn von 60 Talern. Firma 3 verkauft nichts und hat einen Gewinn von 0. 
+Firma A setzt einen Preis von 4, Firma B setzt einen Preis von 4, Firma C setzt einen Preis von 6. Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt. Firma A und B verkaufen beide die gleiche Anzahl an Produkten, beide Firmen haben jeweils 15 Kunden und bekommen damit den gleichen Gewinn von 60 Talern. Firma C verkauft nichts und hat einen Gewinn von 0. 
 <br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
-            <th align="center"> Firma 1 </th>
-            <th align="center"> Firma 2 </th>
-            <th align="center"> Firma 3 </th>
+            <th align="center"> Firma A </th>
+            <th align="center"> Firma B </th>
+            <th align="center"> Firma C </th>
         </tr>
 
         <tr align="center">
@@ -56,14 +56,14 @@ Firma 1 setzt einen Preis von 4, Firma 2 setzt einen Preis von 4, Firma 3 setzt 
     </table>
 <br><br>
 <b>Beispiel 2:</b>
-Firma 1 setzt einen Preis von 7, Firma 2 setzt einen Preis von 7, Firma 3 setzt einen Preis von 7. Somit haben Firma 1, 2 und 3 gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 70 Talern. 
+Firma A setzt einen Preis von 7, Firma B setzt einen Preis von 7, Firma C setzt einen Preis von 7. Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt. Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 10) und bekommen damit den gleichen Gewinn von 70 Talern. 
 <br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
-            <th align="center"> Firma 1 </th>
-            <th align="center"> Firma 2 </th>
-            <th align="center"> Firma 3 </th>
+            <th align="center"> Firma A </th>
+            <th align="center"> Firma B </th>
+            <th align="center"> Firma C </th>
         </tr>
 
         <tr align="center">
@@ -82,14 +82,14 @@ Firma 1 setzt einen Preis von 7, Firma 2 setzt einen Preis von 7, Firma 3 setzt 
     </table>
 <br><br>
 <b>Beispiel 3:</b>
-Firma 1 setzt einen Preis von 1, Firma 2 setzt einen Preis von 4, Firma 3 setzt einen Preis von 10. Somit hat Firma 1 den niedrigsten Preis gesetzt. Firma 1 verkauft als einzige das Produkt zu einem Preis von 1 an alle 30 Kunden und bekommt damit einen Gewinn von 30 Talern. Firma 2 und 3 verkaufen beide nichts und haben einen Gewinn von 0. 
+Firma A setzt einen Preis von 1, Firma B setzt einen Preis von 4, Firma C setzt einen Preis von 10. Somit hat Firma A den niedrigsten Preis gesetzt. Firma A verkauft als einzige das Produkt zu einem Preis von 1 an alle 30 Kunden und bekommt damit einen Gewinn von 30 Talern. Firma B und C verkaufen beide nichts und haben einen Gewinn von 0. 
 <br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
-            <th align="center"> Firma 1 </th>
-            <th align="center"> Firma 2 </th>
-            <th align="center"> Firma 3 </th>
+            <th align="center"> Firma A </th>
+            <th align="center"> Firma B </th>
+            <th align="center"> Firma C </th>
         </tr>
 
         <tr align="center">
