--- a/introduction/templates/introduction/Quiz.html
+++ b/introduction/templates/introduction/Quiz.html
@@ -5,8 +5,7 @@
 
 {% block content %}
 <br><br>
-<b>Wir starten zuerst mit einigen Verständnisfragen bevor es mit dem eigentlichen Experiment weitergeht. 
-Bitte beantworten Sie die folgenden Fragen mit Hilfe der soeben gelesenen Instruktionen.</b>
+<b>Wir starten zuerst mit einigen Verständnisfragen zu den soeben gelesenen Instruktionen, bevor es mit dem eigentlichen Experiment weitergeht. </b>
 <br><br>
 <div class="row">
   <div class="column-left"> 
