--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -19,10 +19,10 @@ Das Experiment endet jetzt.<br><br>
 Ein Zufallsmechanismus hat entschieden, dass das {{payed_sg}}. Spiel ausgezahlt wird.
 <br><br>
 Ein Euro entsprechen dabei {{exchange_rate|c}}. 
-Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up}}.  
+Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up|floatformat:2}} Euro.  
   
    <br><br>
- <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up}} + {{show_up}} = {{final_money_with_show_up}} €.</b>
+ <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up|floatformat:2}} Euro + {{show_up|floatformat:2}} Euro = {{final_money_with_show_up|floatformat:2}} Euro.</b>
    <br><br>
 
     
