--- a/survey/templates/survey/SurveyQuestionsFalk.html
+++ b/survey/templates/survey/SurveyQuestionsFalk.html
@@ -4,6 +4,10 @@
 {% block title %}Bitte beantworten Sie die folgenden Fragen{% endblock %}
 
 {% block content %}
+    <p>
+    <strong>Bitte beantworten Sie noch die folgenden Fragen. Es gibt dabei keine richtigen oder falschen Antworten. Wie schätzen Sie sich persönlich ein?</strong>
+    </p>
+
 <div class="form-group required">
     
         
