--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -7,17 +7,17 @@
 
 
     Der Zufallsmechanismus hat entschieden, dass dies die letzte Runde des {{super_game_count}}. Spiels war. 
-    Sie haben im {{super_game_count}}. Siel insgesamt einen Gewinn von <b>{{accumulated_profit}} Taler </b> erzielt. <br>
+    Sie haben im {{super_game_count}}. Spiel insgesamt einen Gewinn von <b>{{accumulated_profit}} Talern </b> erzielt. <br>
     <br><br>
     <br><br>
 
     {% if super_game_count != 3 %}
     
     
-        <b>Sie spielen jetzt das gleiche Spiel erneut.</b> Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder abgeschlossenen Runde eine weitere Runde gespielt wird.
+        <b>Sie spielen jetzt das gleiche Spiel erneut.</b> Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder Runde eine weitere Runde gespielt wird.
         <br><br>
 
-        <b>WICHTIG:</b> Beachten Sie, dass Sie im folgenden Spiel mit neuen Mitspielern in einem
+        <b>WICHTIG:</b> Beachten Sie, dass Sie im folgenden Spiel mit anderen Experimentteilnehmern als zuvor in einem
         Markt sein werden. 
         
         {% if super_game_count == 2 %}
@@ -27,7 +27,7 @@
         
     {% else %}
     Dies war das letzte Spiel. Das Experiment endet jetzt. <br>
-    Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. 
+    Bitte beantworten Sie nun noch die folgenden Fragen. Ihre Antworten bleiben anonym und dienen nur zu Forschungszwecken. Daher können und werden wir Sie nicht auf Ihre Antworten ansprechen.
 
     {% endif %}
 <br><br>    
