--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -6,13 +6,13 @@
 {% block content %}
 
     <center>
-    <b>Klicken Sie auf "Weiter" um mit dem {{super_game_count}}. von 3 Spielen zu beginnen.
+    <b>Klicken Sie auf "Weiter", um mit dem {{super_game_count}}. von 3 Spielen zu beginnen.
     <br><br>    
-    Sie sind in diesem Spiel Firma {{player.id_in_group}} in Ihrer Gruppe aus ingesamt drei Firmen. Ihre Mitspieler werden sich innerhalb dieses Spiels nicht ändern. 
+    Ihr Markt besteht aus ingesamt drei Firmen. Sie sind in diesem Spiel Firma {{player_id}}. Ihre Mitspieler werden sich innerhalb dieses Spiels nicht ändern. 
     
     {% if  super_game_count != 1 %}
     <br><br>
-    Beachten Sie, dass sich die Mitspieler in Ihrer Gruppe im Vergleich zum letzten Spiel geändert haben.
+    Beachten Sie, dass sich beide Mitspieler in Ihrer Gruppe im Vergleich zum letzten Spiel geändert haben.
 
     {% endif %}
     <br><br>
