--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -7,12 +7,12 @@
 
 
 Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie von einem Computeralgorithmus eine konkrete <b>Preisempfehlung</b>.
-Alle drei Firmen im Markt erhalten dieselbe Preisempfehlung.
+<b>Alle drei Firmen im Markt erhalten dieselbe Preisempfehlung.</b>
 
     <br><br>
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
  Es wird Ihnen also eine Empfehlung ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
-  Der Algorithmus empfiehlt somit <b>nicht</b> einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. 
+  Der Algorithmus empfiehlt somit <b>nicht</b> zwangsläufig einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. 
   <b> Es werden Preise empfohlen, die insgesamt über das gesamte Spiel einen hohen Gewinn erzielen.</b><br>
 Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Information für alle Teilnehmer.</b>
 
