--- a/introduction/templates/introduction/Introduction_2.html
+++ b/introduction/templates/introduction/Introduction_2.html
@@ -7,7 +7,7 @@
 In diesem Experiment treffen Sie wiederholt Preisentscheidungen.
  Diese ermöglichen es Ihnen echtes Geld zu verdienen.
   Wie viel Sie verdienen ist abhängig von Ihren Entscheidungen und
-   denen Ihrer Mitspieler. <b>Unabhängig davon erhalten Sie {{show_up_fee}} für die
+   denen Ihrer Mitspieler. <b>Unabhängig davon erhalten Sie {{show_up_fee|floatformat:2}} Euro für die
     Teilnahme. </b>
 <br><br>
 Im Experiment verwenden wir eine fiktive Geldeinheit namens Taler.
@@ -17,8 +17,8 @@ Im Experiment verwenden wir eine fiktive Geldeinheit namens Taler.
 
 <b>Beispiel:</b><br>
 Teilnehmer A hat im Experiment 465 Taler verdient.
- Umgerechnet entspricht das {{ coins_in_euro }} €.
-  Auf die erste Nachkommastelle gerundet werden Teilnehmer A {{ coins_in_euro_rounded }} € ausgezahlt.
+ Umgerechnet entspricht das {{ coins_in_euro |floatformat:2}} Euro.
+  Auf die erste Nachkommastelle gerundet werden Teilnehmer A {{ coins_in_euro_rounded|floatformat:2 }} Euro ausgezahlt.
 
 <br>
 <br>
