added more alg questions, typo and tests

--- a/introduction/templates/introduction/Algorithm_Introduction.html
+++ b/introduction/templates/introduction/Algorithm_Introduction.html
@@ -13,7 +13,7 @@ Bevor Sie in jeder Runde Ihren Preis wählen, erhalten Sie von einem Computeralg
 Der Algorithmus zielt darauf ab, die <b>Gesamtgewinne aller Firmen über alle Runden hinweg zu maximieren.</b>
  Es wird Ihnen also eine Empfehlung ausgesprochen, die allen Firmen langfristig den größtmöglichen Gewinn ermöglicht.
   Der Algorithmus empfiehlt somit <b>nicht</b> zwangsläufig einen Preis, der den höchstmöglichen Gewinn in einer einzelnen Runde erzielt. 
-  <b> Es werden Preise empfohlen, die insgesamt über das gesamte Spiel einen hohen Gewinn erzielen.</b><br>
+  <b> Es werden Preise empfohlen, die insgesamt über das gesamte Spiel einen hohen Gesamtgewinn erzielen.</b><br>
 Der Algorithmus selbst ist kein Marktteilnehmer und kann auch keinen Gewinn generieren, <b>er dient nur als Information für alle Teilnehmer.</b>
 
 <br><br>
