--- a/introduction/templates/introduction/Introduction_3.html
+++ b/introduction/templates/introduction/Introduction_3.html
@@ -11,7 +11,7 @@ In diesem Spiel repräsentieren Sie eine Firma in einem virtuellen Produktmarkt.
     Sie treffen in jeder Runde des Spiels auf dieselben Firmen (also Experiment-Teilnehmer).<br>
         Alle Firmen entscheiden in jeder Runde erneut <b>eigenständig und gleichzeitig</b>,
          für wie viele Taler Sie Ihr Produkt verkaufen möchten.
-          Sie können Ihr Produkt für einen Peis von {{Constants.deviation_price}}, 2, … oder {{Constants.maximum_price}} Taler verkaufen (nur ganze Taler). 
+          Sie können Ihr Produkt für einen Preis von {{Constants.deviation_price}}, 2, … oder {{Constants.maximum_price}} Taler verkaufen (nur ganze Taler). 
           <b>Es gibt keine Produktionskosten.</b> Ihr Gewinn ist das Produkt aus Preis und der Anzahl verkaufter Einheiten. Formal ausgedrückt:
           <br><br>
           <b> Gewinn = Preis x verkaufte Einheiten </b>
