--- a/survey/templates/survey/SurveyQuestionsAlg.html
+++ b/survey/templates/survey/SurveyQuestionsAlg.html
@@ -303,6 +303,402 @@
     
 </div>
 
+<br><br>
+<b>Wie sehr stimmen Sie den folgenden Aussagen zu?</b>
+<br>
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_agree_statement_1_0">Die Empfehlungen des Algorithmus waren relevant für die Entscheidungen meiner Mitspieler.</label>
+            <div class="controls  field-q_agree_statement_1">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_agree_statement_1_0" class="form-check-label">stimme gar nicht zu &nbsp;</label>
+
+                <input type="radio" name="q_agree_statement_1" value="0" required="" id="id_q_agree_statement_1_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="1" required="" id="id_q_agree_statement_1_1" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="2" required="" id="id_q_agree_statement_1_2" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="3" required="" id="id_q_agree_statement_1_3" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="4" required="" id="id_q_agree_statement_1_4" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="5" required="" id="id_q_agree_statement_1_5" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="6" required="" id="id_q_agree_statement_1_6" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="7" required="" id="id_q_agree_statement_1_7" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="8" required="" id="id_q_agree_statement_1_8" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="9" required="" id="id_q_agree_statement_1_9" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_1" value="10" required="" id="id_q_agree_statement_1_10" class="form-check-input">
+
+                <label for="id_q_agree_statement_1_10" class="form-check-label">stimme voll und ganz zu</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_agree_statement_2_0">Die Empfehlungen des Algorithmus haben dabei geholfen, dass alle Firmen den gleichen Preis wählen.</label>
+            <div class="controls  field-q_agree_statement_2">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_agree_statement_2_0" class="form-check-label">stimme gar nicht zu &nbsp;</label>
+
+                <input type="radio" name="q_agree_statement_2" value="0" required="" id="id_q_agree_statement_2_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="1" required="" id="id_q_agree_statement_2_1" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="2" required="" id="id_q_agree_statement_2_2" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="3" required="" id="id_q_agree_statement_2_3" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="4" required="" id="id_q_agree_statement_2_4" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="5" required="" id="id_q_agree_statement_2_5" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="6" required="" id="id_q_agree_statement_2_6" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="7" required="" id="id_q_agree_statement_2_7" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="8" required="" id="id_q_agree_statement_2_8" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="9" required="" id="id_q_agree_statement_2_9" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_2" value="10" required="" id="id_q_agree_statement_2_10" class="form-check-input">
+
+                <label for="id_q_agree_statement_2_10" class="form-check-label">stimme voll und ganz zu</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_agree_statement_3_0">Die Empfehlungen des Algorithmus haben geholfen, sich auf einen hohen Preis zu koordinieren.</label>
+            <div class="controls  field-q_agree_statement_3">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_agree_statement_3_0" class="form-check-label">stimme gar nicht zu &nbsp;</label>
+
+                <input type="radio" name="q_agree_statement_3" value="0" required="" id="id_q_agree_statement_3_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="1" required="" id="id_q_agree_statement_3_1" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="2" required="" id="id_q_agree_statement_3_2" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="3" required="" id="id_q_agree_statement_3_3" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="4" required="" id="id_q_agree_statement_3_4" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="5" required="" id="id_q_agree_statement_3_5" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="6" required="" id="id_q_agree_statement_3_6" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="7" required="" id="id_q_agree_statement_3_7" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="8" required="" id="id_q_agree_statement_3_8" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="9" required="" id="id_q_agree_statement_3_9" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_3" value="10" required="" id="id_q_agree_statement_3_10" class="form-check-input">
+
+                <label for="id_q_agree_statement_3_10" class="form-check-label">stimme voll und ganz zu</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+<div class="form-group required">
+    
+        
+            <label class="col-form-label" for="id_q_agree_statement_4_0">Die Empfehlungen des Algorithmus haben geholfen, Firmen, die niedrige Preise gewählt haben, zu disziplinieren.</label>
+            <div class="controls  field-q_agree_statement_4">
+                <div class="form-check form-check-inline">
+                                <label for="id_q_agree_statement_4_0" class="form-check-label">stimme gar nicht zu &nbsp;</label>
+
+                <input type="radio" name="q_agree_statement_4" value="0" required="" id="id_q_agree_statement_4_0" class="form-check-input">
+
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="1" required="" id="id_q_agree_statement_4_1" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_1" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="2" required="" id="id_q_agree_statement_4_2" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_2" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="3" required="" id="id_q_agree_statement_4_3" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_3" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="4" required="" id="id_q_agree_statement_4_4" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_4" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="5" required="" id="id_q_agree_statement_4_5" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_5" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="6" required="" id="id_q_agree_statement_4_6" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_6" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="7" required="" id="id_q_agree_statement_4_7" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_7" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="8" required="" id="id_q_agree_statement_4_8" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_8" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="9" required="" id="id_q_agree_statement_4_9" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_9" class="form-check-label"></label>
+            </div>
+        
+    
+        
+            <div class="form-check form-check-inline">
+                <input type="radio" name="q_agree_statement_4" value="10" required="" id="id_q_agree_statement_4_10" class="form-check-input">
+
+                <label for="id_q_agree_statement_4_10" class="form-check-label">stimme voll und ganz zu</label>
+            </div>
+                
+
+                
+            </div>
+        
+    
+</div>
+<br>
 {% formfield player.q_alg_comments%}
 
 
@@ -313,6 +709,11 @@
 {{ form.q_alg_relevant_other_player.errors }}
 {{ form.q_alg_no_recommendation.errors }}
 {{ form.q_alg_helpful.errors }}
+
+{{ form.q_agree_statement_1.errors }}
+{{ form.q_agree_statement_2.errors }}
+{{ form.q_agree_statement_3.errors }}
+{{ form.q_agree_statement_4.errors }}
 
 {% next_button %}
 {% endblock %}
