Corona Bonus ath the very end added

--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -21,8 +21,12 @@ Ein Zufallsmechanismus hat entschieden, dass das {{payed_sg}}. Spiel ausgezahlt 
 Ein Euro entsprechen dabei {{exchange_rate|c}}. 
 Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up|floatformat:2}} Euro.  
   
+<br><br>
+<b> Als zusätzlicher finanzieller Bonus in der aktuellen COVID19-Pandemie zahlen wir Ihnen weitere {{corona_bonus_after_end|floatformat:2}} Euro. Danke, dass Sie an diesem Experiment teilgenommen haben. </b>
+
    <br><br>
- <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up|floatformat:2}} Euro + {{show_up|floatformat:2}} Euro = {{final_money_with_show_up|floatformat:2}} Euro.</b>
+ <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up|floatformat:2}} Euro + {{show_up|floatformat:2}} Euro (Bonus für Ihr Erscheinen) + 
+     {{corona_bonus_after_end|floatformat:2}} Euro (Corona-Bonus) = {{final_money_with_show_up_and_corona|floatformat:2}} Euro.</b>
    <br><br>
 
     
