--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -22,7 +22,7 @@ Ein Euro entsprechen dabei {{exchange_rate|c}}.
 Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up|floatformat:2}} Euro.  
   
 <br><br>
-<b> Als zusätzlicher finanzieller Bonus in der aktuellen COVID19-Pandemie zahlen wir Ihnen weitere {{corona_bonus_after_end|floatformat:2}} Euro. Danke, dass Sie an diesem Experiment teilgenommen haben. </b>
+<b> Als zusätzlichen finanziellen Bonus in der aktuellen COVID19-Pandemie zahlen wir Ihnen weitere {{corona_bonus_after_end|floatformat:2}} Euro. Danke, dass Sie an diesem Experiment teilgenommen haben. </b>
 
    <br><br>
  <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up|floatformat:2}} Euro + {{show_up|floatformat:2}} Euro (Bonus für Ihr Erscheinen) + 
