added tests for payment page and added info there wrt to online payment and corona bonus

--- a/payment/templates/payment/FinalResults.html
+++ b/payment/templates/payment/FinalResults.html
@@ -9,11 +9,11 @@ Viele Dank für Ihre Teilnahme
 Das Experiment endet jetzt.<br><br> 
 
 
-    <table class="table">
+<table class="table">
 
-<tr> <th> Gewinn im ersten Spiel </th> <td> {{payoff_sg_1}} Taler </td> </tr>
-<tr> <th> Gewinn im zweiten Spiel </th> <td>  {{payoff_sg_2}} Taler </td> </tr>
-<tr> <th> Gewinn im dritten Spiel </th> <td>  {{payoff_sg_3}} Taler </td> </tr>
+  <tr> <th> Gewinn im ersten Spiel </th> <td> {{payoff_sg_1}} Taler </td> </tr>
+  <tr> <th> Gewinn im zweiten Spiel </th> <td>  {{payoff_sg_2}} Taler </td> </tr>
+  <tr> <th> Gewinn im dritten Spiel </th> <td>  {{payoff_sg_3}} Taler </td> </tr>
 </table>
 <br>
 Ein Zufallsmechanismus hat entschieden, dass das {{payed_sg}}. Spiel ausgezahlt wird.
@@ -22,16 +22,23 @@ Ein Euro entsprechen dabei {{exchange_rate|c}}.
 Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up|floatformat:2}} Euro.  
   
 <br><br>
-<b> Als zusätzlichen finanziellen Bonus in der aktuellen COVID19-Pandemie zahlen wir Ihnen weitere {{corona_bonus_after_end|floatformat:2}} Euro. Danke, dass Sie an diesem Experiment teilgenommen haben. </b>
+<b> Als zusätzlichen finanziellen Bonus in der aktuellen COVID19-Pandemie zahlen wir Ihnen weitere {{corona_bonus_after_end|floatformat:2}} Euro.</b>  <br><br>
 
    <br><br>
- <b> Ihre gesamte Auszahlung ist also {{final_money_no_show_up|floatformat:2}} Euro + {{show_up|floatformat:2}} Euro (Bonus für Ihr Erscheinen) + 
-     {{corona_bonus_after_end|floatformat:2}} Euro (Corona-Bonus) = {{final_money_with_show_up_and_corona|floatformat:2}} Euro.</b>
+ <b> Ihre gesamte Auszahlung: </b>
+ <table class="table">
+
+  <tr> <th> Gewinn im {{payed_sg}}. Spiel </th> <td> {{final_money_no_show_up|floatformat:1}} Euro </td> </tr>
+  <tr> <th> Bonus für Ihr pünktliches Erscheinen </th> <td>  {{show_up|floatformat:1}} Euro </td> </tr>
+  <tr> <th> Coronebedingter Extrabonus </th> <td> {{corona_bonus_after_end|floatformat:1}} Euro </td> </tr>
+  <tr> <th> <p style="color:red"> Gesamtgewinn </p></th> <th><p style="color:red">  {{final_money_with_show_up_and_corona|floatformat:1}} Euro </p></th> </tr>
+
+</table>
    <br><br>
-
-    
-
-
-Die Teilnehmer werden nun nacheinander nach vorne gebeten, um Ihnen den Gewinn auszuzahlen. Warten Sie bitte an Ihrem Platz, bis Sie an der Reihe sind. 
+Die Auszahlung wird online via Paypal oder Banktransfer durchgeführt.
+Die entsprechende Auszahlungsseite wird sich gleich auf Ihrem PC öffnen. 
+Bitte halten Sie Ihre IBAN-Nummer oder Ihre Paypal-E-Mail-Adresse bereit.
+Außerdem benötigen Sie Ihre Teilnehmer-ID. Diese finden Sie in der Erinnerungsemail
+zu diesem Experiment. 
 {% endblock %}
 
