fixed admin page

--- a/payment/templates/payment/Payment.html
+++ b/payment/templates/payment/Payment.html
@@ -14,7 +14,7 @@ Bitte füllen Sie außerdem die Quittung, die an ihrem Platz liegt, aus.
 <br><br>
 <b>Erinnerung: Ihre Gesamtauszahlung ist {{final_money_with_show_up_and_corona|floatformat:2}} Euro </b>
 <br><br>
-<iframe width="100%" height="1000" src="https://www3.hhu.de/lab/dice.php?currView=mainpage&pid=[TEILNEHMER-ID_EINFÜGEN]&expId=eyJleHBEYXRhIjpbeyJpZCI6IjE1NzE3MzY2OTAiLCJuYW1lIjoiUHJpY2UifV19"></iframe>
+<iframe width="100%" height="1000" src="http://www3.hhu.de/lab/dice.php?currView=mainpage&pid=[TEILNEHMER-ID_EINFÜGEN]&expId=eyJleHBEYXRhIjpbeyJpZCI6IjE1NzE3MzY2OTAiLCJuYW1lIjoiUHJpY2UifV19"></iframe>
 
 
 {% endblock %}
