--- a/introduction/templates/introduction/Quiz.html
+++ b/introduction/templates/introduction/Quiz.html
@@ -75,7 +75,7 @@
 </style>
 
 
-<link href="{% static "pricerec/calculator.css" %}" rel="stylesheet">
+<link href="{% static "calculator/calculator.css" %}" rel="stylesheet">
 
 
 <script>
