--- a/introduction/templates/introduction/Quiz.html
+++ b/introduction/templates/introduction/Quiz.html
@@ -10,7 +10,18 @@
 <div class="row">
   <div class="column-left"> 
  
-  	{% formfields %}
+  	{% formfield player.q_how_many_customer %}
+  	{% formfield player.q_after_fixed_round %}
+
+	{% with label_profit_1 as current_label %}
+  		{% formfield player.q_profit_1 label=current_label %}
+	{% endwith %}
+	{% with label_profit_2 as current_label %}
+  	{% formfield player.q_profit_2 label=current_label%}
+	{% endwith %}
+
+  	{% formfield player.q_profit_3 %}
+
 <br>
 
         {% next_button %}
