Adding the agents

--- a/introduction/templates/introduction/Quiz.html
+++ b/introduction/templates/introduction/Quiz.html
@@ -12,7 +12,7 @@
  
   	{% formfield player.q_how_many_customer %}
   	{% formfield player.q_after_fixed_round %}
-
+	{% formfield player.q_consumer_wtp %}
 	{% with label_profit_1 as current_label %}
   		{% formfield player.q_profit_1 label=current_label %}
 	{% endwith %}
