added first tests and adjusted instructions for bertrand game

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree %}
 
-{% block title %}Ende des {{super_game_count}}. Spiels {% endblock %}
+{% block title %}Ende des {{super_game_count}}. Durchgangs {% endblock %}
 
 {% block content %}
 
