--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -7,9 +7,33 @@
 
     <center>
     <b>Klicken Sie auf "Weiter", um mit dem {{super_game_count}}. von 3 Durchgängen zu beginnen.
-    <br><br>    
-    Ihr Markt besteht aus ingesamt drei Firmen. Sie sind in diesem Durchgang Firma {{player_id}}. Ihre Mitspieler werden sich innerhalb dieses Durchgangs nicht ändern. 
-    
+    <br><br>
+    {% if n_players == 3%}
+    Ihr Markt besteht aus ingesamt drei Firmen.
+    {% else %}
+    Ihr Markt besteht aus ingesamt zwei Firmen.
+    {% endif %}
+    Sie sind in diesem Durchgang Firma {{player_id}}.
+    Ihre Mitspieler werden sich innerhalb dieses Durchgangs nicht ändern. 
+    {% if algo_treatment %}
+    <br><br>
+        <u>
+        {% if group_treatment == '1H1A' %}
+        Firma B wird
+        {% elif group_treatment == '1H2A' %}
+        Firma B und C werden
+        {% elif group_treatment == '2H1A' %}
+        Firma C wird
+        {% endif %}
+        in jeder Runde dieses Durchgangs mit einem Algorithmus ausgestattet sein</u>, welcher die 
+        erforderlichen Preisentscheidungen für den 
+        {% if group_treatment == '1H2A' %}
+        jeweiligen Teilnehmer oder die jeweilige Teilnehmerin übernimmt.
+        {% else %}
+        Teilnehmer oder die Teilnehmerin übernimmt.
+        {% endif %}
+    <br><br>
+    {% endif %}
     {% if  super_game_count == 2 %}
     <br><br>
     Beachten Sie, dass sich beide Mitspieler in Ihrer Gruppe im Vergleich zum letzten Durchgang geändert haben.
